--- a/index.html
+++ b/index.html
@@ -3338,40 +3338,40 @@ function updateNavigationView() {
     // =================================================================
 
     // Calcular heading baseado na direção do MOVIMENTO (posição anterior → atual)
-    let movementHeading = navigationMode.lastHeading;
+    let movementHeading = navigationMode.lastHeading || 0;
 
     if (navigationMode.lastPosition) {
         const movementDistance = calculateDistanceMeters(navigationMode.lastPosition, currentPos);
 
-        // Só atualiza o ângulo se o deslocamento for significativo (> 6m)
-        // Isso evita oscilações com ruído GPS quando parado
-        const MIN_DISTANCE_FOR_ROTATION = 6;
+        // Reduzido para 3m - gira mais cedo durante mudanças de direção
+        const MIN_DISTANCE_FOR_ROTATION = 3;
 
         if (movementDistance > MIN_DISTANCE_FOR_ROTATION) {
             // Calcular direção do movimento: de onde vim → para onde estou
             const newHeading = calculateHeading(navigationMode.lastPosition, currentPos);
 
             // Suavizar a transição do heading para evitar saltos bruscos
-            if (movementHeading !== 0) {
+            if (movementHeading !== 0 && navigationMode.lastHeading !== undefined) {
                 let diff = newHeading - movementHeading;
 
                 // Normalizar diferença para o menor caminho (ex: de 350° para 10° é +20°, não -340°)
                 if (diff > 180) diff -= 360;
                 if (diff < -180) diff += 360;
 
-                // Fator de suavização - transição suave
-                // 0.2 = mais responsivo (vira mais rápido)
-                const SMOOTHING_FACTOR = 0.2;
+                // Aumentado para 0.5 - gira MUITO mais rápido e responsivo
+                // Isso faz o mapa virar quase instantaneamente ao mudar de direção
+                const SMOOTHING_FACTOR = 0.5;
 
                 movementHeading = (movementHeading + diff * SMOOTHING_FACTOR + 360) % 360;
             } else {
+                // Primeira vez ou heading zerado - usar diretamente o novo heading
                 movementHeading = newHeading;
             }
 
             // Atualiza o último heading conhecido
             navigationMode.lastHeading = movementHeading;
         }
-        // Se distância < 6m, mantém heading anterior (não gira quando parado)
+        // Se distância < 3m, mantém heading anterior (não gira quando parado/devagar)
     } else {
         // Primeira posição - usar direção para o destino como inicial
         movementHeading = calculateHeading(currentPos, navigationMode.destination);
