--- a/index.html
+++ b/index.html
@@ -3806,6 +3806,58 @@ class GPSTracker {
     getAccuracy() {
         return this.accuracy;
     }
+
+    // Força uma atualização imediata do GPS (útil quando o app volta do segundo plano)
+    forceUpdate() {
+        return new Promise((resolve, reject) => {
+            if (!navigator.geolocation) {
+                reject(new Error('Geolocalização não suportada'));
+                return;
+            }
+
+            console.log('🔄 [GPS] Forçando atualização de localização...');
+
+            const options = {
+                enableHighAccuracy: this.config.highAccuracy,
+                timeout: 10000, // Timeout mais curto para resposta rápida
+                maximumAge: 0   // Sempre dados frescos
+            };
+
+            navigator.geolocation.getCurrentPosition(
+                (position) => {
+                    console.log('✅ [GPS] Posição atualizada:', position.coords.latitude, position.coords.longitude);
+                    this.updatePosition(position);
+                    resolve(position);
+                },
+                (error) => {
+                    console.warn('⚠️ [GPS] Erro ao forçar atualização:', error);
+                    reject(error);
+                },
+                options
+            );
+        });
+    }
+
+    // Força atualização e centraliza o mapa na posição do usuário
+    async forceUpdateAndCenter() {
+        try {
+            const position = await this.forceUpdate();
+            const coords = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude
+            };
+            map.panTo(coords);
+            console.log('📍 [GPS] Mapa centralizado na nova posição');
+            return position;
+        } catch (error) {
+            console.warn('⚠️ [GPS] Não foi possível atualizar e centralizar:', error);
+            // Mesmo com erro, tenta centralizar na última posição conhecida
+            if (this.markerCoords.lat !== 0 && this.markerCoords.lng !== 0) {
+                map.panTo(this.markerCoords);
+            }
+            throw error;
+        }
+    }
 }
 
 // Instância global do GPS Tracker
@@ -10326,6 +10378,64 @@ window.addEventListener('pageshow', function(event) {
     setTimeout(() => {
         resetPhoneButtonsFocus();
     }, 100);
+});
+
+// ===========================
+// ATUALIZAÇÃO GPS AO VOLTAR DO SEGUNDO PLANO
+// ===========================
+// Quando o usuário guarda o celular e depois abre novamente,
+// forçar atualização imediata do GPS e centralizar no mapa
+
+let lastVisibilityTime = Date.now();
+let isPageVisible = true;
+
+document.addEventListener('visibilitychange', async function() {
+    if (document.hidden) {
+        // Página foi para segundo plano
+        isPageVisible = false;
+        lastVisibilityTime = Date.now();
+        console.log('📴 [VISIBILITY] Página em segundo plano');
+    } else {
+        // Página voltou ao primeiro plano
+        isPageVisible = true;
+        const timeInBackground = Date.now() - lastVisibilityTime;
+        console.log(`📱 [VISIBILITY] Página visível novamente (${Math.round(timeInBackground/1000)}s em segundo plano)`);
+
+        // Se ficou mais de 3 segundos em segundo plano, forçar atualização
+        if (timeInBackground > 3000 && gpsTracker) {
+            try {
+                updateStatus('🔄 Atualizando GPS...', true);
+
+                // Forçar atualização e centralizar
+                await gpsTracker.forceUpdateAndCenter();
+
+                showToast(
+                    'Localização atualizada',
+                    'GPS sincronizado com sua posição atual',
+                    'success',
+                    2000
+                );
+            } catch (error) {
+                console.warn('⚠️ [VISIBILITY] Erro ao atualizar GPS ao voltar:', error);
+                // Não mostrar erro ao usuário, apenas log
+            }
+        }
+    }
+});
+
+// Também atualizar quando a janela recebe foco (complementar ao visibilitychange)
+window.addEventListener('focus', async function() {
+    const timeInBackground = Date.now() - lastVisibilityTime;
+
+    // Se ficou mais de 5 segundos sem foco e o GPS está ativo
+    if (timeInBackground > 5000 && gpsTracker && !document.hidden) {
+        try {
+            console.log('🔄 [FOCUS] Atualizando GPS após recuperar foco...');
+            await gpsTracker.forceUpdate();
+        } catch (error) {
+            console.warn('⚠️ [FOCUS] Erro ao atualizar GPS:', error);
+        }
+    }
 });
 
 // Tratamento de erro de carregamento do mapa
