--- a/index.html
+++ b/index.html
@@ -7910,7 +7910,7 @@ async function saveQuickClient(addressData, location) {
         );
 
         // Atualizar lista de clientes e marcadores
-        await loadClientMarkers();
+        await loadClients();
         await updateClientList();
 
         // Atualizar lista de endereços no modal
