--- a/index.html
+++ b/index.html
@@ -1191,18 +1191,24 @@
         align-items: center;
         gap: 8px;
         transition: all 0.3s ease;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
     }
 
     .location-picker-confirm-btn.active {
         transform: translateX(-50%) scale(1);
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
     }
 
-    .location-picker-confirm-btn:hover {
+    .location-picker-confirm-btn.active:hover {
         transform: translateX(-50%) scale(1.05);
         box-shadow: 0 6px 25px rgba(52, 168, 83, 0.5);
     }
 
-    .location-picker-confirm-btn:active {
+    .location-picker-confirm-btn.active:active {
         transform: translateX(-50%) scale(0.98);
     }
 
@@ -1229,13 +1235,19 @@
         justify-content: center;
         transform: scale(0);
         transition: all 0.3s ease;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
     }
 
     .location-picker-cancel-btn.active {
         transform: scale(1);
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
     }
 
-    .location-picker-cancel-btn:hover {
+    .location-picker-cancel-btn.active:hover {
         background: rgba(234, 67, 53, 0.9);
     }
 
